    - adjusted rocket silo result inventory size to 50.
    - changed retorter cost from 200 to 20 stone brick, 500 to 20 pipe, 300 to 30 steel plates.
    - reduced kerogen to shale oil recipe craft time to 5 from 15.
    - increased kerogen to shale oil output to 250 from 100.
    - added compatibiltiy for loader redux with small parts
    - pitch cracking coke output reduced to 10 from 30.
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2022-10-20
  Changes:
    - adjustements to rock spawning.
    - fixed incorrect icon on organic solvent
    - moved -shale oil development tech to automation science.
    - added oil refinery to shale oil development.
    - reduced the amount of steam used in several tar refining recipes
    - replaced hydrogen with steam in kerogen retorting recipe.
    - changed shale oil refining recipe to give out condensates, light oil, and heavy oil
    - moved olefin plant to shale oil development
    - replaced chem plant with reformer in olefin plant recipe
    - replaced advanced circuit with electronic circuit in olefin plant.
    - adjustemnts made to tar refining chain balance
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2022-10-14
  Changes:
    - Killed the dinosuars
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2021-03-23
  Changes:
    - Removed unused setting for finite oil.
    - Removed shortcut for switching oil derrick to output natural gas.
    - Converted natural gas over to use the same system as tar extractor and oil derrick. has it's own mining drill now.
    - Added natural gas pumpjacks mk1-4.
    - Removed duplicate tar extractor recipes.
    - Removed bitumen seep richness from the new game menu. changing richness would break the system and lock you out of oil for an unnecessarily long time.